--- a/Styles.css
+++ b/Styles.css
@@ -186,3 +186,24 @@ font-size: 45px;
 .iframe{
   display: flex;
 }
+
+.containerBody {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+}
+
+iframe {
+  width: 80%;
+  max-width: 800px;
+  height: 600px;
+  border: 0;
+  margin: 0 auto;
+}
+
+body, iframe {
+  margin: 0;
+  padding: 0;
+}
